tests/rpm-pkgs/libidn2-2.3.2-3.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING:
libidn2-2.3.2/src/idn2.c: scope_hint: In function 'process_input'
libidn2-2.3.2/src/idn2.c:153:7: warning[-Woverlength-strings]: string length '28846' is greater than the length '4095' ISO C99 compilers are required to support
#  153 |       puts (CONDITIONS);
#      |       ^~~~
libidn2-2.3.2/src/idn2.c: scope_hint: At top level
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  151|     else if (strcmp (readbuf, "show c") == 0)
#  152|       {
#  153|->       puts (CONDITIONS);
#  154|         return;
#  155|       }
